--- a/projects/swimlane/ngx-datatable/src/lib/components/datatable.component.html
+++ b/projects/swimlane/ngx-datatable/src/lib/components/datatable.component.html
@@ -4,6 +4,7 @@
     [sorts]="sorts"
     [sortType]="sortType"
     [scrollbarH]="scrollbarH"
+    [scrollBarWidthPx]="scrollBarWidthPx"
     [innerWidth]="_innerWidth"
     [offsetX]="_offsetX | async"
     [dealsWithGroup]="groupedRows !== undefined"
@@ -41,6 +42,7 @@
     [pageSize]="pageSize"
     [offsetX]="_offsetX | async"
     [rowDetail]="rowDetail"
+    [scrollBarWidthPx]="scrollBarWidthPx"
     [groupHeader]="groupHeader"
     [selected]="selected"
     [innerWidth]="_innerWidth"
